# pmo-agent

./: .dockerignore  .gitignore  CLAUDE.md  DEPLOY.md  ETE PMO Resource Planner.xlsx  ETE_PMO_Resource_Budget_Manager 3 (1).xlsx  README.md  ai agent spec.rtf  app.py  capacity_engine.py  components.py  config.py  data_layer.py  excel_connector.py  excel_dashboard.py  import_synnergie.py  jira_sync.py  migrate_excel_to_sqlite.py  models.py  pages_assistant.py  pages_capacity.py  pages_editor.py  pages_exec.py  pages_financials.py  pages_portfolio.py  pages_project.py  pages_roster.py  pages_timeline.py  pages_timesheets.py  pmo_agent.py  requirements.txt  schedule_optimizer.py  seed_data.sql  snapshot_store.py  sqlite_connector.py  start_streamlit.sh  test_e2e.py  test_foundation.py
.streamlit/: config.toml
backend/: .env.example  Dockerfile  pyproject.toml  railway.json  requirements.txt
backend/app/: config.py  deps.py  engines.py  main.py  middleware.py
backend/app/routers/: agent.py  assignments.py  capacity.py  comments.py  financials.py  initiatives.py  jira.py  meta.py  milestones.py  portfolio.py  roster.py  scenarios.py  settings.py  snapshots.py  tasks.py  timesheets.py
backend/app/schemas/: __init__.py  assignment.py  capacity.py  comment.py  financials.py  financials_write.py  initiative.py  initiative_write.py  meta.py  milestone.py  milestone_write.py  project.py  project_create.py  project_detail.py  project_update.py  roster.py  roster_write.py  scenario.py  settings.py  snapshot.py  task.py  task_write.py  timesheet.py  timesheet_write.py
(+126 files in other folders)
